--- a/1-Recherche d'information classique.ipynb
+++ b/1-Recherche d'information classique.ipynb
@@ -48,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -98,7 +98,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "ZNWPECSs9wgH",
         "colab": {
@@ -331,28 +331,49 @@
         "\n",
         "    Dans l'exemple ci-dessous. C'est la mesure de Jaccard qui est utilisée.\n",
         "    \"\"\"\n",
-        "    scores = [0.0 for _ in range(len(self.docs))]\n",
+        "        scores = [0.0 for _ in range(len(self.docs))]\n",
         "\n",
-        "    query_set = set(query)\n",
+        "        query_tf = {}  # Dictionnaire pour stocker les fréquences TF des termes de la requête\n",
         "\n",
-        "    for d in range(len(self.docs)):\n",
-        "        doc_set = set(self.docs[d])\n",
-        "        intersection = len(query_set & doc_set)\n",
-        "        union = len(query_set | doc_set)\n",
-        "        # Calcul de la similarité Jaccard\n",
-        "        scores[d] = intersection / union if union != 0 else 0.0\n",
+        "        # Calcul de la fréquence TF pour chaque terme de la requête\n",
+        "        for term in query:\n",
+        "            if term in query_tf:\n",
+        "                query_tf[term] += 1\n",
+        "            else:\n",
+        "                query_tf[term] = 1\n",
         "\n",
-        "    # Tri des scores\n",
-        "    ranking = [idx for idx, sim in sorted(enumerate(scores),\n",
-        "                                        key=lambda pair: pair[1], reverse=True)]\n",
-        "    results = []\n",
-        "    for i in range(10):\n",
-        "        results.append((ranking[i], scores[ranking[i]]))\n",
-        "    return results\n",
+        "        # Calcul de la similarité cosinus pour chaque document\n",
+        "        for d in range(len(self.docs)):\n",
+        "            doc_tf = {}  # Dictionnaire pour stocker les fréquences TF des termes du document\n",
+        "\n",
+        "            # Calcul de la fréquence TF pour chaque terme du document\n",
+        "            for term in self.docs[d]:\n",
+        "                if term in doc_tf:\n",
+        "                    doc_tf[term] += 1\n",
+        "                else:\n",
+        "                    doc_tf[term] = 1\n",
+        "\n",
+        "            # Calcul du produit scalaire des vecteurs TF\n",
+        "            dot_product = sum(query_tf.get(term, 0) * doc_tf.get(term, 0) for term in query)\n",
+        "\n",
+        "            # Calcul des normes des vecteurs TF\n",
+        "            query_norm = math.sqrt(sum((query_tf[term] * math.log10(1 + query_tf[term]))**2 for term in query))\n",
+        "            doc_norm = math.sqrt(sum((doc_tf[term] * math.log10(1 + doc_tf[term]))**2 for term in self.docs[d]))\n",
+        "\n",
+        "            # Calcul du score de similarité cosinus\n",
+        "            if query_norm != 0 and doc_norm != 0:\n",
+        "                scores[d] = dot_product / (query_norm * doc_norm)\n",
+        "\n",
+        "        # Tri des scores\n",
+        "        ranking = [idx for idx, sim in sorted(enumerate(scores), key=lambda pair: pair[1], reverse=True)]\n",
+        "        results = []\n",
+        "        for i in range(10):\n",
+        "            results.append((ranking[i], scores[ranking[i]]))\n",
+        "        return results\n",
         "\n",
         "# Ne pas modifier les lignes ci-dessous\n",
         "IRSystem.rank_retrieve = rank_retrieve\n",
-        "run_tests(ir_system, part=3)"
+        "run_tests(ir_system, part=3)\n"
       ]
     }
   ],
